--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "dist",
     "hca-wasm/pkg/*.{wasm,d.ts,js}"
   ],
-  "keywords": ["criware", "acb", "awb", "hca", "audio", "decode"],
+  "keywords": [
+    "criware",
+    "acb",
+    "awb",
+    "hca",
+    "audio",
+    "decode"
+  ],
   "author": "LeadRDRK",
   "license": "ISC",
   "repository": "github:LeadRDRK/node-cricodecs",
   "devDependencies": {
     "@types/node": "^18.19.67",
-    "typescript": "^5.7.2",
+    "typescript": "^5.6.3",
     "wasm-pack": "^0.13.1"
   }
 }
